[project]
name = "studio-nodes"
description = "🧩 Aspect Ratio Image Size Calculator, 🖼️ Aspect Ratio Resizer, and 📄 Markdown Link Generator for ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy", "torch", "Pillow"]

[project.urls]
Repository = "https://github.com/comfyuistudio/ComfyUI-Studio-nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/comfyuistudio/ComfyUI-Studio-nodes/wiki"
"Bug Tracker" = "https://github.com/comfyuistudio/ComfyUI-Studio-nodes/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Studio-nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

